welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
getCouleurSol()
If (Color.green) {avance()}



}        
